cta fix color contrast

--- a/src/style/components/_cta.scss
+++ b/src/style/components/_cta.scss
@@ -30,7 +30,7 @@
     }
 
     .cta--p {
-        color: #7f7f7f;
+        color: #595959;
         font-size: calc(14px + 12 * (100vw - 320px)/ 279);
         font-family: gotham-book-web;
     }
