--- a/src/style/general.css
+++ b/src/style/general.css
@@ -1240,7 +1240,7 @@ header .header--nav .header--nav--ul .dropdown a .window--icon {
   margin: 3rem 0 1rem 0;
 }
 .cta--container .cta--p {
-  color: #7f7f7f;
+  color: #595959;
   font-size: calc(14px + 12 * (100vw - 320px) / 279);
   font-family: gotham-book-web;
 }
